force-app/main/default/objects/Krow__Expensify_Integration__c/Krow__Expensify_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Expensify Integration</label>
</CustomObject>