force-app/main/default/objects/Krow__Expensify_Integration__c/fields/Krow__Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Client_Id__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>