force-app/main/default/objects/Krow__Expensify_Integration__c/fields/Krow__Enabled__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>