force-app/main/default/objects/Krow__Expensify_Integration__c/fields/Krow__Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Last_Sync_Date__c</fullName>
    <label>Last Sync Date</label>
    <type>Date</type>
</CustomField>