force-app/main/default/objects/Krow__Expensify_Integration__c/fields/Krow__Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__Partner_ID__c</fullName>
    <label>Partner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>