force-app/main/default/objects/Krow__Expensify_Integration__c/fields/Krow__Partner_Secret__c.field-meta.xml
<CustomField>
    <fullName>Krow__Partner_Secret__c</fullName>
    <label>Partner Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>