force-app/main/default/objects/Krow__Expensify_Integration__c/fields/Krow__Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sync_Message__c</fullName>
    <label>Sync Message</label>
    <type>TextArea</type>
</CustomField>